samples/_failures_safe/1761418911_acf01b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_136bd0e7.c: In function ‘multiply_matrices’:
./samples/SAFE/__tmp_136bd0e7.c:116: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_136bd0e7.c:115:21: note: to match this ‘(’
  115 |                 if ((product > 0 && sum > INT_MAX
      |                     ^
./samples/SAFE/__tmp_136bd0e7.c:115:17: error: expected declaration or statement at end of input
  115 |                 if ((product > 0 && sum > INT_MAX
      |                 ^~
./samples/SAFE/__tmp_136bd0e7.c:115:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_136bd0e7.c:115:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_136bd0e7.c:115:17: error: expected declaration or statement at end of input
